--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ main, develop ]
 
+permissions:
+  contents: read
+  pull-requests: write
+  security-events: write
+
 jobs:
   # Job 1: Lint y formato de código
   lint:
@@ -92,6 +97,9 @@ jobs:
   security:
     name: Análisis de seguridad
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
     steps:
       - name: Checkout código
         uses: actions/checkout@v4
@@ -107,7 +115,8 @@ jobs:
           args: '-no-fail -fmt sarif -out results.sarif ./...'
 
       - name: Subir resultados SARIF
-        uses: github/codeql-action/upload-sarif@v2
+        uses: github/codeql-action/upload-sarif@v3
+        continue-on-error: true
         with:
           sarif_file: results.sarif
 
