Refactor Docker setup and backend structure
- Updated docker-compose.yml to point to the new backend directory for build context and bind mounts.
- Added Dockerfile for the backend service, including build and runtime stages.
- Removed old data and uploads directories along with their contents to streamline the project structure.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   # Backend API
   api:
     build:
-      context: .
+      context: ./backend
       dockerfile: Dockerfile
     container_name: payvue-api
     environment:
@@ -14,9 +14,9 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      # Bind mounts para persistencia garantizada (no se borran con docker-compose down)
-      - ./data:/app/data
-      - ./uploads:/app/uploads
+      # Bind mounts dentro de backend para persistencia
+      - ./backend/data:/app/data
+      - ./backend/uploads:/app/uploads
     restart: unless-stopped
     networks:
       - payvue-network
